# memcove

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  TODOS.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: README.md  finance_benchmark.py
benchmarks/.cache/: prices_2y_44.parquet  prices_8y_44.parquet
benchmarks/results/: bench_220t_8y.json  bench_44t_2y.json
deploy/: networkpolicy.example.yaml  values.example.yaml
deploy/charts/memcove/: Chart.yaml  values.yaml
deploy/charts/memcove/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  flight-deployment.yaml  flight-service.yaml  ingress.yaml  networkpolicy.yaml  reconcile-cronjob.yaml  secret.yaml  server-deployment.yaml  server-service.yaml  serviceaccount.yaml
deploy/keycloak/: README.md  docker-compose.keycloak.yml  memcove-realm.json
docs/: CONFIGURATION.md  changelog.md  index.md  requirements.txt
docs/concepts/: architecture.md  isolation.md  scratchpad.md  security.md
docs/configuration/: auth.md  local-dev.md  settings.md
docs/deployment/: byo-trino.md  checklist.md  helm.md  kubernetes.md
docs/getting-started/: connecting.md  docker.md  quickstart.md  walkthrough.md
docs/reference/: cli.md
docs/tools/: deleting.md  exporting.md  index.md  querying.md  reading.md  resources.md  storing.md  streaming.md
infra/trino/etc/catalog/: iceberg.properties  scratch.properties
scripts/: agent_demo.py  flight_smoke.py  pipeline_demo.py  smoke.py
src/memcove/: __init__.py  reconciler.py  server.py
src/memcove/benchmarks/: __init__.py  dcf.py  finance.py
src/memcove/core/: arrow_io.py  audit.py  catalog.py  config.py  errors.py  models.py  naming.py  oauth.py  registry.py  registry_backends.py  scratch.py  sql_guard.py  storage.py  tenancy.py  trino_client.py
src/memcove/data_plane/: flight_server.py  tickets.py
src/memcove/tools/: artifacts.py  derive.py  discovery.py  ingest.py  objects.py  query.py
tests/: test_audit.py  test_catalog_schema.py  test_dcf_pipeline.py  test_discovery.py  test_export_streaming.py  test_flight.py  test_flight_doput.py  test_flight_streaming.py  test_health.py  test_ingest_allowlist.py  test_integration.py  test_integration_scratch.py  test_naming_tenancy.py  test_oauth.py  test_objects_repair.py  test_reconciler.py  test_registry_backends.py  test_registry_guarded.py  test_registry_pool.py  test_s3_credentials.py  test_scratch.py  test_sql_guard.py  test_storage_location.py  test_streaming.py  test_tenancy.py  test_tickets.py  test_trino_principal.py
