[project]
name = "memcove"
version = "0.7.0"
description = "Memcove — a lakehouse-backed memory service for LLM agents, exposed over MCP"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.2.0",
    "orjson>=3.10.0",
    "trino>=0.330.0",
    "pyiceberg[s3fs,pyarrow]>=0.8.0",
    "pyarrow>=17.0.0",
    "boto3>=1.34.0",
    "sqlglot>=25.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
    "pyjwt[crypto]>=2.8.0",
]

[project.optional-dependencies]
# MySQL registry backend (Postgres via psycopg is a core dep; SQLite is stdlib).
mysql = [
    "pymysql>=1.1.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "polars>=1.0.0",
    "requests>=2.32.0",
    "openai>=1.40.0",
    "ruff>=0.6.0",
    "pymysql>=1.1.0",
]

[project.urls]
Homepage = "https://memcove.github.io/memcove/"
Repository = "https://github.com/memcove/memcove"
Documentation = "https://memcove.github.io/memcove/"
Changelog = "https://github.com/memcove/memcove/blob/main/CHANGELOG.md"

[project.scripts]
memcove-server = "memcove.server:main"
memcove-flight = "memcove.data_plane.flight_server:main"
memcove-reconcile = "memcove.reconciler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memcove"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires the docker-compose stack to be up",
]

[tool.ruff]
line-length = 100
target-version = "py312"
